Setup Top Bar and Nav Bar

--- a/EMA_email_form.html
+++ b/EMA_email_form.html
@@ -14,7 +14,35 @@
 
 </head>
 
+
+
 <body>
+
+<div class="top_bar">
+    <img alt="" height="68" src="" width="100" /><div id="layer1" class="page_title">
+    <strong>OURC Admin</strong></div>
+</div>
+
+<div  class="nav_bar">
+
+    <div class="nav_button" id="button_home">
+        Admin Home</div>
+    <div  class="nav_button" id="button_past_races">
+        Past Races</div>
+    <div class="nav_button" id="button_future_races" >
+        Future Races</div>
+    <div class="nav_button" id="button_other_events" >
+        Other Events</div>
+    <div class="nav_button" id="button_membership">
+        Membership</div>
+    <div class="nav_button" id="button_news_items">
+        News Items</div>
+    <div class="nav_button" id="button_mailings">
+        Mailings</div>
+
+
+</div>
+
 
 </body>
 </html>
