CSS for main divs

--- a/EMA_email_form.html
+++ b/EMA_email_form.html
@@ -40,7 +40,6 @@
     <div class="nav_button" id="button_mailings">
         Mailings</div>
 
-
 </div>
 
 <div class="main_window">
@@ -63,19 +62,19 @@
             </div>
 
             <div class="form_field" id="form_date">
-                <label class="form_label" for="date">Date of Dispatch:</label>
+                <label class="form_label" for="dispatch_date">Date of Dispatch:</label>
                 <input class="form_input" type="text" id="dispatch_date" name="date"/>
             </div>
 
             <div class="form_field" id="form_file">
-                <label class="form_label" for="file">File Attachment:</label>
+                <label class="form_label" for="attached_file">File Attachment:</label>
                 <input class="form_input" type="file" id="attached_file" name="file"/>
             </div>
 
             <div class="form_field" id="form_message_text">
-                <label class="form_label" for="name">Message Text:</label>
-    <textarea rows="8" cols="50" class="form_input" id="message_text" name="text">
-    </textarea>
+                <label class="form_label" for="message_text">Message Text:</label>
+                <textarea rows="8" cols="50" class="form_input" id="message_text" name="text">
+                </textarea>
             </div>
 
             <div class="form_button">
